# CornerstoneMock

./: .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  README.md  TEMP.md  add.xml  query
CornerstoneAgent/: AGENT.md  ENTERPRISE.md  README.md
CornerstoneBridge/: cornerstone-bridge.add-samples-queue.json  cornerstone-bridge.config.example.json  cornerstone-bridge.config.example.toml  cornerstone-bridge.config.json  pyproject.toml
CornerstoneBridge/scripts/: probe_upstream_recv.py
CornerstoneBridge/src/cornerstone_bridge/: __init__.py  asyncio_util.py  bridge_logging.py  compac_protocol.py  compac_serial_port.py  compac_service.py  config.py  gateway.py  http_api.py  hub.py  hub_helpers.py  hub_types.py  parsers.py  paths.py  protocol.py  queue_persistence.py  server.py  upstream_framing.py
CornerstoneBridge/src/cornerstone_bridge/ui/: __init__.py  bridge_api.py  build_info.py  config_form_panel.py  config_io.py  config_tooltips.py  main.py  main_window.py  single_instance.py  win_admin.py
CornerstoneBridge/tests/: test_bridge_logging_policy.py  test_compac_protocol.py  test_compac_service.py  test_config_toml.py  test_gateway_xml_log_detail.py  test_parse_host_list.py  test_protocol_upstream_xml.py  test_tcp_client_policy.py  test_upstream_logon_response.py  test_upstream_recover.py  test_upstream_recv_buffer.py  test_web_config_toml.py
CornerstoneCLI/: pyproject.toml
CornerstoneCLI/src/cornerstone_cli/: __init__.py  cli.py  console_io.py  single_instance.py
CornerstoneCLI/src/cornerstone_cli/communications/: __init__.py  http_requestor.py  tcp_engine.py
CornerstoneCLI/src/cornerstone_cli/crypto/: __init__.py  hash_creator.py
CornerstoneMock/: cornerstone-mock.config.example.json  pyproject.toml  repplot_sample.xml
CornerstoneMock/src/cornerstone_mock/: __init__.py  dev_mock_web.py  mock_server.py
CornerstoneMock/src/cornerstone_mock/mock_web_static/: app.js  index.html  styles.css
CornerstoneQueue/: CornerstoneQueue.sln
CornerstoneQueue/CornerstoneQueue/: App.xaml  App.xaml.cs  CornerstoneQueue.csproj  EdgeStripWindow.cs  InstrumentUiInspectWindow.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsPanel.cs  SettingsWindow.cs  SingleInstanceGuard.cs  app.manifest
CornerstoneQueue/CornerstoneQueue/Models/: AppSettings.cs  BridgeDtos.cs
CornerstoneQueue/CornerstoneQueue/Services/: AppIconHelper.cs  AppSettingsStore.cs  BridgeApiClient.cs  EdgeDockController.cs  InstrumentUiAutomationService.cs  NativeWindowPositioner.cs  SendResultFormatter.cs  (+2 more)
CornerstoneWeb/: cornerstone-mock.config.example.json  cornerstone-web.config.example.json  cornerstone-web.config.example.toml  cornerstone-web.config.json  dev.ps1  pyproject.toml  setup.py
CornerstoneWeb/src/cornerstone_mock/: __init__.py  dev_mock_web.py  mock_server.py
CornerstoneWeb/src/cornerstone_mock/mock_web_static/: styles.css
CornerstoneWeb/src/cornerstone_web/: __init__.py  config.py  dev_web.py  http_server.py  server.py
CornerstoneWeb/src/cornerstone_web/web_static/: app.js  index.html  styles.css
Cornerstone_RemoteControlClient/: README.md  license.md
Cornerstone_RemoteControlClient/App/: CornerstoneRemoteControlClient.application
Cornerstone_RemoteControlClient/CornerstoneRemoteControlClient/: App.xaml  CornerstoneRemoteControlClient.csproj  CornerstoneRemoteControlClient.sln  FactoryModule.cs
Cornerstone_RemoteControlClient/Pipelines/: continuous-integration.yaml
Cornerstone_RemoteControlClient/docs/: GDS Remote Control.docx  Remote Control.docx
installer/: .gitignore  Cornerstone-test-minimal.iss  Cornerstone.iss  README.md  build-release.ps1  register-services-here.cmd
installer/entrypoints/: run_bridge.py  run_bridge_ui.py  run_cli.py  run_web.py
installer/scripts/: deploy-scripts-elevated.ps1  install-services.ps1  merge-config.ps1  post-install.ps1  register-services.cmd  uninstall-services.ps1  validate-install.ps1
installer/specs/: bridge.spec  cli.spec  web.spec
scripts/: dev-instrument-mock.py  fix_http_api.py  split_mock_server.py
(+25 files in other folders)
