[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cornerstone-bridge"
version = "0.1.10"
description = "Cornerstone TCP 网关、XML 解析、对内 REST API 与可选桌面控制台（依赖 cornerstone-cli）。"
requires-python = ">=3.14"
license = { text = "Proprietary" }
authors = [{ name = "LECO / Cornerstone Bridge" }]
dependencies = ["cornerstone-cli", "tomlkit>=0.13.2", "pyserial>=3.5"]

[project.optional-dependencies]
ui = ["PySide6>=6.8"]

[project.scripts]
cornerstone-bridge = "cornerstone_bridge.server:main"
cornerstone-bridge-ui = "cornerstone_bridge.ui.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
