[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cornerstone-cli"
version = "0.1.2"
description = "Cornerstone 远程控制 Python CLI（TCP/HTTP 通信与命令行）。"
requires-python = ">=3.14"
license = { text = "Proprietary" }
authors = [{ name = "LECO / Cornerstone Python CLI" }]
dependencies = []

[project.scripts]
cornerstone-cli = "cornerstone_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
