[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cornerstone-web"
version = "0.1.6"
description = "Cornerstone Web UI（静态页 + Bridge API 代理，依赖 cornerstone-bridge）。"
requires-python = ">=3.14"
license = { text = "Proprietary" }
authors = [{ name = "LECO / Cornerstone Web" }]
dependencies = ["cornerstone-bridge", "cornerstone-cli"]

[project.scripts]
cornerstone-web = "cornerstone_web.server:main"
cornerstone-web-dev = "cornerstone_web.dev_web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
cornerstone_web = ["web_static/*.html", "web_static/*.css", "web_static/*.js"]
